# test-data-innvestigate

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml
data/layer/: Conv2D.hdf5  Conv2D_relu.hdf5  Dense.hdf5  Dense_relu.hdf5
src/: test-vgg16.py  utils.py
src/test_data_innvestigate/: runall.py
src/test_data_innvestigate/generate/: single_layer.py  vgg16.py
src/test_data_innvestigate/utils/: analyzers.py  images.py  print_hdf5.py
tests/: test_reference_layer.py  test_vgg16.py  test_vgg16_data.py
